Complete the Korean translation

--- a/locale/ko/debreate.po
+++ b/locale/ko/debreate.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Debreate 0.8.0\n"
 "Report-Msgid-Bugs-To: antumdeluge@gmail.com\n"
 "POT-Creation-Date: 2016-09-19 01:41-0700\n"
-"PO-Revision-Date: 2018-03-05 18:48+0900\n"
+"PO-Revision-Date: 2018-03-05 18:54+0900\n"
 "Last-Translator: \n"
 "Language-Team: Lee Yunseok <thericke00@gmail.com>\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -324,7 +324,11 @@ msgid ""
 "Use the arrows located in the top-right corner or the \"Page\" menu to "
 "navigate through the program. For some information on Debian packages use "
 "the reference links in the \"Help\" menu."
-msgstr "데브리에이트는 데비안 기반의 시스템에 설치하기 위한 패키지 "
+msgstr ""
+"데브리에이트는 데비안 기반의 시스템에 설치하기 위한 패키지를 만드는 데 도움"
+"을 줍니다. 프로그램을 탐색하려면 우측 상단이나 \"페이지\" 메뉴에 있는 화살표"
+"를 사용하세요. 데비안 패키지에 관한 정보는 \"도움말\"메뉴의 참조 링크를 사용"
+"하십시오."
 
 msgid "For a video tutorial check the link below."
 msgstr "비디오 튜토리얼은 아래 링크를 확인하세요."
